# pawphone

./: .gitignore  Cargo.toml  README.md
src/: app.rs  connection.rs  haptics.rs  main.rs  models.rs  persistence.rs  personality.rs  phase.rs  telemetry.rs
src/audio/: mod.rs  synth.rs
src/views/: contacts.rs  hud.rs  mod.rs  settings.rs  theme.rs  thread.rs
